# ChangeLog for app-misc/alix-leds
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> +metadata.xml:
  Added metadata.xml
