@@ -1,1 +1,1 @@
-DIST alix-leds-0.1.tar.bz2 2153 SHA256 700921b4ffe5231d2778cafa821b54eecd8197af9a055eff098ed4eeaa776b64
+DIST alix-leds-0.1.tar.bz2 2153 SHA256 700921b4ffe5231d2778cafa821b54eecd8197af9a055eff098ed4eeaa776b64 SHA512 a74511157c7dcbc73df2878766a0f529ca1d70acab5e4634ca5ba412b4ca1c8e75d559a288a42f6e9a7d1416b5da2452a321ff0942fb028fe4f3c5d1748a787b WHIRLPOOL 164803d199522c232e18276429c47752046416025acf50ad0cb26acd8e7384eeb23bd10198629ca5101c2262da9b6e42e19def01f54c26611d411a0aa797e975
